--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "csso": "latest",
     "react-jss": "latest",
     "parse": "latest",
+    "nprogress": "latest",
     "axios": "latest",
     "react-chartkick": "latest",
     "chart.js": "latest",
@@ -41,6 +42,7 @@
     "mongoose": "latest",
     "react-grid-layout": "latest",
     "classnames": "latest",
+    "react-custom-scrollbars": "latest",
     "agenda": "latest",
     "node-where": "latest",
     "react-table": "latest",
