--- a/package.json
+++ b/package.json
@@ -13,38 +13,53 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^3.6.1",
+    "@zeit/next-css": "latest",
+    "agenda": "latest",
+    "sequelize": "latest",
+    "pg": "latest",
+    "pg-native": "latest",
+    "pg-hstore": "latest",
+    "pg-promise": "latest",
+    "axios": "latest",
+    "chart.js": "latest",
+    "classnames": "latest",
     "compression": "^1.7.3",
     "cookie-parser": "~1.4.3",
+    "csso": "latest",
     "debug": "~2.6.9",
+    "event-source-polyfill": "latest",
     "express": "~4.16.0",
+    "express-sse": "latest",
+    "socket.io": "latest",
+    "socket.io-client": "latest",
     "hbs": "~4.0.1",
+    "shineout": "latest",
     "helmet": "^3.15.0",
+    "highcharts": "latest",
     "http-errors": "~1.6.2",
+    "jss": "latest",
     "ldapjs": "^1.0.2",
+    "lodash": "latest",
+    "mongoose": "latest",
     "morgan": "~1.9.0",
     "mssql": "^4.3.0",
     "next": "^7.0.2",
+    "react-block-ui": "latest",
     "node-addon-api": "^1.6.2",
+    "node-where": "latest",
+    "nprogress": "latest",
+    "parse": "latest",
     "parse-dashboard": "^1.2.0",
     "parse-server": "^3.1.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "jss": "latest",
     "prop-types": "latest",
-    "csso": "latest",
-    "react-jss": "latest",
-    "parse": "latest",
-    "nprogress": "latest",
-    "axios": "latest",
+    "react": "^16.6.3",
     "react-chartkick": "latest",
-    "chart.js": "latest",
-    "lodash": "latest",
-    "mongoose": "latest",
-    "react-grid-layout": "latest",
-    "classnames": "latest",
     "react-custom-scrollbars": "latest",
-    "agenda": "latest",
-    "node-where": "latest",
+    "react-dom": "^16.6.3",
+    "react-grid-layout": "latest",
+    "react-highcharts": "latest",
+    "react-jss": "latest",
+    "react-proptype-conditional-require": "^1.0.4",
     "react-table": "latest",
     "sw-precache-webpack-plugin": "latest"
   },
