--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@material-ui/core": "^3.6.1",
     "@zeit/next-css": "latest",
+    "recharts": "latest",
     "agenda": "latest",
     "sequelize": "latest",
     "pg": "latest",
@@ -61,6 +62,9 @@
     "react-jss": "latest",
     "react-proptype-conditional-require": "^1.0.4",
     "react-table": "latest",
+    "node-cmd": "latest",
+    "react-overlay-loading": "latest",
+    "react-easy-chart": "latest",
     "sw-precache-webpack-plugin": "latest"
   },
   "devDependencies": {
